// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AutoComplete /> Variants properly renders a async auto complete 1`] = `
.emotion-22 {
  margin-bottom: 0.5rem;
}

.emotion-4 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-0 {
  color: #5B5D61;
  display: block;
  font-family: Motiva Sans;
  font-size: 0.875rem;
  line-height: 1.5;
}

.emotion-17 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 3px;
  border: 1px solid #E0E1E2;
  box-sizing: border-box;
  color: #25272D;
  font-family: Motiva Sans;
  font-size: 0.875rem;
  line-height: 1.25;
  margin: 0.25rem 0;
  padding: 0.5rem;
  width: 100%;
}

@media (max-width:768px) {
  .emotion-17 {
    font-size: 1rem;
  }
}

.emotion-17::-webkit-input-placeholder {
  color: #989A9C;
}

.emotion-17:-moz-placeholder {
  color: #989A9C;
}

.emotion-17::-moz-placeholder {
  color: #989A9C;
}

.emotion-17:-ms-input-placeholder {
  color: #989A9C;
}

.emotion-17:focus {
  border: 1px solid #081D17;
  box-shadow: 0 0 8px rgba(192,249,218,0.1);
  outline: none;
}

.emotion-17:disabled {
  background: #F2F2F2;
}

.emotion-17:required {
  box-shadow: none;
}

.emotion-10 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  grid-gap: 0.25rem;
}

.emotion-6 {
  font-family: Motiva Sans;
  color: #989A9C;
  box-sizing: border-box;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-8 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-family: Motiva Sans;
  font-size: 0.875rem;
}

.emotion-8:focus {
  outline: none;
}

.emotion-15 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
}

.emotion-13 {
  display: block;
}

.emotion-20 {
  font-family: Motiva Sans;
  color: #EE2200;
  line-height: 1.5;
  font-size: 0.75rem;
}

.emotion-19 {
  position: relative;
  box-sizing: border-box;
}

.emotion-12 {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  margin-bottom: 0;
  margin-top: 0;
  width: 1px;
  box-sizing: border-box;
}

<div
  className="emotion-22 emotion-23"
>
  <div
    className="emotion-4 emotion-3"
  >
    <div
      className="emotion-2 emotion-3"
    >
      <label
        className="emotion-0 emotion-1"
        htmlFor="auto-complete-async"
      >
        AutoComplete Input
      </label>
    </div>
  </div>
  <div
    className=" emotion-19"
    onKeyDown={[Function]}
  >
    <div
      className="emotion-17 emotion-18"
      cx={[Function]}
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="emotion-10 emotion-3"
        cx={[Function]}
      >
        <div
          className="emotion-6 emotion-3"
          color="text.placeholder"
          cx={[Function]}
        >
          Select...
        </div>
        <input
          aria-autocomplete="list"
          aria-label="AutoComplete Input"
          autoCapitalize="none"
          autoComplete="off"
          autoCorrect="off"
          className="emotion-8 emotion-9"
          cx={[Function]}
          id="react-select-2-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          spellCheck="false"
          tabIndex="0"
          type="text"
          value=""
        />
      </div>
      <div
        className="emotion-15 emotion-16"
        cx={[Function]}
        display="grid"
      >
        <span
          className=" emotion-12"
        />
        <i
          aria-hidden="true"
          aria-label="show options"
          className="ar ar-chevron emotion-13 emotion-14"
          cx={[Function]}
          display="block"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        />
      </div>
    </div>
  </div>
  <span
    className="emotion-20 emotion-21"
    color="red"
  >
    Test the auto complete input
  </span>
</div>
`;

exports[`<AutoComplete /> Variants properly renders a asyncCreatable auto complete 1`] = `
.emotion-22 {
  margin-bottom: 0.5rem;
}

.emotion-4 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-0 {
  color: #5B5D61;
  display: block;
  font-family: Motiva Sans;
  font-size: 0.875rem;
  line-height: 1.5;
}

.emotion-17 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 3px;
  border: 1px solid #E0E1E2;
  box-sizing: border-box;
  color: #25272D;
  font-family: Motiva Sans;
  font-size: 0.875rem;
  line-height: 1.25;
  margin: 0.25rem 0;
  padding: 0.5rem;
  width: 100%;
}

@media (max-width:768px) {
  .emotion-17 {
    font-size: 1rem;
  }
}

.emotion-17::-webkit-input-placeholder {
  color: #989A9C;
}

.emotion-17:-moz-placeholder {
  color: #989A9C;
}

.emotion-17::-moz-placeholder {
  color: #989A9C;
}

.emotion-17:-ms-input-placeholder {
  color: #989A9C;
}

.emotion-17:focus {
  border: 1px solid #081D17;
  box-shadow: 0 0 8px rgba(192,249,218,0.1);
  outline: none;
}

.emotion-17:disabled {
  background: #F2F2F2;
}

.emotion-17:required {
  box-shadow: none;
}

.emotion-10 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  grid-gap: 0.25rem;
}

.emotion-6 {
  font-family: Motiva Sans;
  color: #989A9C;
  box-sizing: border-box;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-8 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-family: Motiva Sans;
  font-size: 0.875rem;
}

.emotion-8:focus {
  outline: none;
}

.emotion-15 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
}

.emotion-13 {
  display: block;
}

.emotion-20 {
  font-family: Motiva Sans;
  color: #EE2200;
  line-height: 1.5;
  font-size: 0.75rem;
}

.emotion-19 {
  position: relative;
  box-sizing: border-box;
}

.emotion-12 {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  margin-bottom: 0;
  margin-top: 0;
  width: 1px;
  box-sizing: border-box;
}

<div
  className="emotion-22 emotion-23"
>
  <div
    className="emotion-4 emotion-3"
  >
    <div
      className="emotion-2 emotion-3"
    >
      <label
        className="emotion-0 emotion-1"
        htmlFor="auto-complete-asyncCreatable"
      >
        AutoComplete Input
      </label>
    </div>
  </div>
  <div
    className=" emotion-19"
    onKeyDown={[Function]}
  >
    <div
      className="emotion-17 emotion-18"
      cx={[Function]}
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="emotion-10 emotion-3"
        cx={[Function]}
      >
        <div
          className="emotion-6 emotion-3"
          color="text.placeholder"
          cx={[Function]}
        >
          Select...
        </div>
        <input
          aria-autocomplete="list"
          aria-label="AutoComplete Input"
          autoCapitalize="none"
          autoComplete="off"
          autoCorrect="off"
          className="emotion-8 emotion-9"
          cx={[Function]}
          id="react-select-3-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          spellCheck="false"
          tabIndex="0"
          type="text"
          value=""
        />
      </div>
      <div
        className="emotion-15 emotion-16"
        cx={[Function]}
        display="grid"
      >
        <span
          className=" emotion-12"
        />
        <i
          aria-hidden="true"
          aria-label="show options"
          className="ar ar-chevron emotion-13 emotion-14"
          cx={[Function]}
          display="block"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        />
      </div>
    </div>
  </div>
  <span
    className="emotion-20 emotion-21"
    color="red"
  >
    Test the auto complete input
  </span>
</div>
`;

exports[`<AutoComplete /> Variants properly renders a creatable auto complete 1`] = `
.emotion-22 {
  margin-bottom: 0.5rem;
}

.emotion-4 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-0 {
  color: #5B5D61;
  display: block;
  font-family: Motiva Sans;
  font-size: 0.875rem;
  line-height: 1.5;
}

.emotion-17 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 3px;
  border: 1px solid #E0E1E2;
  box-sizing: border-box;
  color: #25272D;
  font-family: Motiva Sans;
  font-size: 0.875rem;
  line-height: 1.25;
  margin: 0.25rem 0;
  padding: 0.5rem;
  width: 100%;
}

@media (max-width:768px) {
  .emotion-17 {
    font-size: 1rem;
  }
}

.emotion-17::-webkit-input-placeholder {
  color: #989A9C;
}

.emotion-17:-moz-placeholder {
  color: #989A9C;
}

.emotion-17::-moz-placeholder {
  color: #989A9C;
}

.emotion-17:-ms-input-placeholder {
  color: #989A9C;
}

.emotion-17:focus {
  border: 1px solid #081D17;
  box-shadow: 0 0 8px rgba(192,249,218,0.1);
  outline: none;
}

.emotion-17:disabled {
  background: #F2F2F2;
}

.emotion-17:required {
  box-shadow: none;
}

.emotion-10 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  grid-gap: 0.25rem;
}

.emotion-6 {
  font-family: Motiva Sans;
  color: #989A9C;
  box-sizing: border-box;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-8 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-family: Motiva Sans;
  font-size: 0.875rem;
}

.emotion-8:focus {
  outline: none;
}

.emotion-15 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
}

.emotion-13 {
  display: block;
}

.emotion-20 {
  font-family: Motiva Sans;
  color: #EE2200;
  line-height: 1.5;
  font-size: 0.75rem;
}

.emotion-19 {
  position: relative;
  box-sizing: border-box;
}

.emotion-12 {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  margin-bottom: 0;
  margin-top: 0;
  width: 1px;
  box-sizing: border-box;
}

<div
  className="emotion-22 emotion-23"
>
  <div
    className="emotion-4 emotion-3"
  >
    <div
      className="emotion-2 emotion-3"
    >
      <label
        className="emotion-0 emotion-1"
        htmlFor="auto-complete-creatable"
      >
        AutoComplete Input
      </label>
    </div>
  </div>
  <div
    className=" emotion-19"
    onKeyDown={[Function]}
  >
    <div
      className="emotion-17 emotion-18"
      cx={[Function]}
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="emotion-10 emotion-3"
        cx={[Function]}
      >
        <div
          className="emotion-6 emotion-3"
          color="text.placeholder"
          cx={[Function]}
        >
          Select...
        </div>
        <input
          aria-autocomplete="list"
          aria-label="AutoComplete Input"
          autoCapitalize="none"
          autoComplete="off"
          autoCorrect="off"
          className="emotion-8 emotion-9"
          cx={[Function]}
          id="react-select-4-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          spellCheck="false"
          tabIndex="0"
          type="text"
          value=""
        />
      </div>
      <div
        className="emotion-15 emotion-16"
        cx={[Function]}
        display="grid"
      >
        <span
          className=" emotion-12"
        />
        <i
          aria-hidden="true"
          aria-label="show options"
          className="ar ar-chevron emotion-13 emotion-14"
          cx={[Function]}
          display="block"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        />
      </div>
    </div>
  </div>
  <span
    className="emotion-20 emotion-21"
    color="red"
  >
    Test the auto complete input
  </span>
</div>
`;

exports[`<AutoComplete /> Variants properly renders a default auto complete 1`] = `
.emotion-22 {
  margin-bottom: 0.5rem;
}

.emotion-4 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-0 {
  color: #5B5D61;
  display: block;
  font-family: Motiva Sans;
  font-size: 0.875rem;
  line-height: 1.5;
}

.emotion-17 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 3px;
  border: 1px solid #E0E1E2;
  box-sizing: border-box;
  color: #25272D;
  font-family: Motiva Sans;
  font-size: 0.875rem;
  line-height: 1.25;
  margin: 0.25rem 0;
  padding: 0.5rem;
  width: 100%;
}

@media (max-width:768px) {
  .emotion-17 {
    font-size: 1rem;
  }
}

.emotion-17::-webkit-input-placeholder {
  color: #989A9C;
}

.emotion-17:-moz-placeholder {
  color: #989A9C;
}

.emotion-17::-moz-placeholder {
  color: #989A9C;
}

.emotion-17:-ms-input-placeholder {
  color: #989A9C;
}

.emotion-17:focus {
  border: 1px solid #081D17;
  box-shadow: 0 0 8px rgba(192,249,218,0.1);
  outline: none;
}

.emotion-17:disabled {
  background: #F2F2F2;
}

.emotion-17:required {
  box-shadow: none;
}

.emotion-10 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  grid-gap: 0.25rem;
}

.emotion-6 {
  font-family: Motiva Sans;
  color: #989A9C;
  box-sizing: border-box;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-8 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-family: Motiva Sans;
  font-size: 0.875rem;
}

.emotion-8:focus {
  outline: none;
}

.emotion-15 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
}

.emotion-13 {
  display: block;
}

.emotion-20 {
  font-family: Motiva Sans;
  color: #EE2200;
  line-height: 1.5;
  font-size: 0.75rem;
}

.emotion-19 {
  position: relative;
  box-sizing: border-box;
}

.emotion-12 {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  margin-bottom: 0;
  margin-top: 0;
  width: 1px;
  box-sizing: border-box;
}

<div
  className="emotion-22 emotion-23"
>
  <div
    className="emotion-4 emotion-3"
  >
    <div
      className="emotion-2 emotion-3"
    >
      <label
        className="emotion-0 emotion-1"
        htmlFor="auto-complete-default"
      >
        AutoComplete Input
      </label>
    </div>
  </div>
  <div
    className=" emotion-19"
    onKeyDown={[Function]}
  >
    <div
      className="emotion-17 emotion-18"
      cx={[Function]}
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="emotion-10 emotion-3"
        cx={[Function]}
      >
        <div
          className="emotion-6 emotion-3"
          color="text.placeholder"
          cx={[Function]}
        >
          Select...
        </div>
        <input
          aria-autocomplete="list"
          aria-label="AutoComplete Input"
          autoCapitalize="none"
          autoComplete="off"
          autoCorrect="off"
          className="emotion-8 emotion-9"
          cx={[Function]}
          id="react-select-5-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          spellCheck="false"
          tabIndex="0"
          type="text"
          value=""
        />
      </div>
      <div
        className="emotion-15 emotion-16"
        cx={[Function]}
        display="grid"
      >
        <span
          className=" emotion-12"
        />
        <i
          aria-hidden="true"
          aria-label="show options"
          className="ar ar-chevron emotion-13 emotion-14"
          cx={[Function]}
          display="block"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        />
      </div>
    </div>
  </div>
  <span
    className="emotion-20 emotion-21"
    color="red"
  >
    Test the auto complete input
  </span>
</div>
`;

exports[`<AutoComplete /> hideDropdownIndicator false renders the auto complete with a dropdown indicator 1`] = `
.emotion-22 {
  margin-bottom: 0.5rem;
}

.emotion-4 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-0 {
  color: #5B5D61;
  display: block;
  font-family: Motiva Sans;
  font-size: 0.875rem;
  line-height: 1.5;
}

.emotion-17 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 3px;
  border: 1px solid #E0E1E2;
  box-sizing: border-box;
  color: #25272D;
  font-family: Motiva Sans;
  font-size: 0.875rem;
  line-height: 1.25;
  margin: 0.25rem 0;
  padding: 0.5rem;
  width: 100%;
}

@media (max-width:768px) {
  .emotion-17 {
    font-size: 1rem;
  }
}

.emotion-17::-webkit-input-placeholder {
  color: #989A9C;
}

.emotion-17:-moz-placeholder {
  color: #989A9C;
}

.emotion-17::-moz-placeholder {
  color: #989A9C;
}

.emotion-17:-ms-input-placeholder {
  color: #989A9C;
}

.emotion-17:focus {
  border: 1px solid #081D17;
  box-shadow: 0 0 8px rgba(192,249,218,0.1);
  outline: none;
}

.emotion-17:disabled {
  background: #F2F2F2;
}

.emotion-17:required {
  box-shadow: none;
}

.emotion-10 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  grid-gap: 0.25rem;
}

.emotion-6 {
  font-family: Motiva Sans;
  color: #989A9C;
  box-sizing: border-box;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-8 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-family: Motiva Sans;
  font-size: 0.875rem;
}

.emotion-8:focus {
  outline: none;
}

.emotion-15 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
}

.emotion-13 {
  display: block;
}

.emotion-20 {
  font-family: Motiva Sans;
  color: #EE2200;
  line-height: 1.5;
  font-size: 0.75rem;
}

.emotion-19 {
  position: relative;
  box-sizing: border-box;
}

.emotion-12 {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  margin-bottom: 0;
  margin-top: 0;
  width: 1px;
  box-sizing: border-box;
}

<div
  className="emotion-22 emotion-23"
>
  <div
    className="emotion-4 emotion-3"
  >
    <div
      className="emotion-2 emotion-3"
    >
      <label
        className="emotion-0 emotion-1"
        htmlFor="auto-complete"
      >
        AutoComplete Input
      </label>
    </div>
  </div>
  <div
    className=" emotion-19"
    onKeyDown={[Function]}
  >
    <div
      className="emotion-17 emotion-18"
      cx={[Function]}
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="emotion-10 emotion-3"
        cx={[Function]}
      >
        <div
          className="emotion-6 emotion-3"
          color="text.placeholder"
          cx={[Function]}
        >
          Select...
        </div>
        <input
          aria-autocomplete="list"
          aria-label="AutoComplete Input"
          autoCapitalize="none"
          autoComplete="off"
          autoCorrect="off"
          className="emotion-8 emotion-9"
          cx={[Function]}
          id="react-select-6-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          spellCheck="false"
          tabIndex="0"
          type="text"
          value=""
        />
      </div>
      <div
        className="emotion-15 emotion-16"
        cx={[Function]}
        display="grid"
      >
        <span
          className=" emotion-12"
        />
        <i
          aria-hidden="true"
          aria-label="show options"
          className="ar ar-chevron emotion-13 emotion-14"
          cx={[Function]}
          display="block"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        />
      </div>
    </div>
  </div>
  <span
    className="emotion-20 emotion-21"
    color="red"
  >
    Test the auto complete input
  </span>
</div>
`;

exports[`<AutoComplete /> hideDropdownIndicator true renders the auto complete without a dropdown indicator 1`] = `
.emotion-22 {
  margin-bottom: 0.5rem;
}

.emotion-4 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-0 {
  color: #5B5D61;
  display: block;
  font-family: Motiva Sans;
  font-size: 0.875rem;
  line-height: 1.5;
}

.emotion-17 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 3px;
  border: 1px solid #E0E1E2;
  box-sizing: border-box;
  color: #25272D;
  font-family: Motiva Sans;
  font-size: 0.875rem;
  line-height: 1.25;
  margin: 0.25rem 0;
  padding: 0.5rem;
  width: 100%;
}

@media (max-width:768px) {
  .emotion-17 {
    font-size: 1rem;
  }
}

.emotion-17::-webkit-input-placeholder {
  color: #989A9C;
}

.emotion-17:-moz-placeholder {
  color: #989A9C;
}

.emotion-17::-moz-placeholder {
  color: #989A9C;
}

.emotion-17:-ms-input-placeholder {
  color: #989A9C;
}

.emotion-17:focus {
  border: 1px solid #081D17;
  box-shadow: 0 0 8px rgba(192,249,218,0.1);
  outline: none;
}

.emotion-17:disabled {
  background: #F2F2F2;
}

.emotion-17:required {
  box-shadow: none;
}

.emotion-10 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  grid-gap: 0.25rem;
}

.emotion-6 {
  font-family: Motiva Sans;
  color: #989A9C;
  box-sizing: border-box;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-8 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-family: Motiva Sans;
  font-size: 0.875rem;
}

.emotion-8:focus {
  outline: none;
}

.emotion-15 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
}

.emotion-20 {
  font-family: Motiva Sans;
  color: #EE2200;
  line-height: 1.5;
  font-size: 0.75rem;
}

.emotion-13 {
  display: none;
}

.emotion-19 {
  position: relative;
  box-sizing: border-box;
}

.emotion-12 {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  margin-bottom: 0;
  margin-top: 0;
  width: 1px;
  box-sizing: border-box;
}

<div
  className="emotion-22 emotion-23"
>
  <div
    className="emotion-4 emotion-3"
  >
    <div
      className="emotion-2 emotion-3"
    >
      <label
        className="emotion-0 emotion-1"
        htmlFor="auto-complete"
      >
        AutoComplete Input
      </label>
    </div>
  </div>
  <div
    className=" emotion-19"
    onKeyDown={[Function]}
  >
    <div
      className="emotion-17 emotion-18"
      cx={[Function]}
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="emotion-10 emotion-3"
        cx={[Function]}
      >
        <div
          className="emotion-6 emotion-3"
          color="text.placeholder"
          cx={[Function]}
        >
          Select...
        </div>
        <input
          aria-autocomplete="list"
          aria-label="AutoComplete Input"
          autoCapitalize="none"
          autoComplete="off"
          autoCorrect="off"
          className="emotion-8 emotion-9"
          cx={[Function]}
          id="react-select-7-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          spellCheck="false"
          tabIndex="0"
          type="text"
          value=""
        />
      </div>
      <div
        className="emotion-15 emotion-16"
        cx={[Function]}
        display="grid"
      >
        <span
          className=" emotion-12"
        />
        <i
          aria-hidden="true"
          aria-label="show options"
          className="ar ar-chevron emotion-13 emotion-14"
          cx={[Function]}
          display="none"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        />
      </div>
    </div>
  </div>
  <span
    className="emotion-20 emotion-21"
    color="red"
  >
    Test the auto complete input
  </span>
</div>
`;
